--- a/plugin.xml
+++ b/plugin.xml
@@ -83,6 +83,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         </config-file>
 
         <dependency id="cordova-support-android-plugin" version="~2.0.4" />
+        <framework src="build.gradle" custom="true" type="gradleReference" />
 
         <framework src="platform('com.google.firebase:firebase-bom:$ANDROID_FIREBASE_BOM_VERSION')" />
         <framework src="com.google.firebase:firebase-analytics" />
