--- a/plugin.xml
+++ b/plugin.xml
@@ -25,7 +25,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 
     <platform name="ios">
         <preference name="IOS_FIREBASE_POD_VERSION" default="10.17.0" />
-
+        <hook type="after_prepare" src="hooks/ios/iOSCopyPreferences.js" />
         <config-file target="config.xml" parent="/*">
             <feature name="FirebaseAnalytics">
                 <param name="ios-package" value="FirebaseAnalyticsPlugin" />
